Added fight and flee strategy