@@ -11,46 +11,61 @@ import java.util.Collections;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNull;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.eq;
-import static org.mockito.Mockito.verify;
-import static org.mockito.Mockito.when;
+import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
 class GraceNolanSierraStrategyTest {
 
     @Mock CommandFactory commandFactory;
     @Mock ICharacter character;
-    @Mock ICharacter demon;
+    @Mock ICharacter weakestCreature;
+    @Mock ICharacter strongerCreature;
     @Mock Command command;
+    @Mock Command doNothingCommand;
     @Mock IFood steak;
     @Mock IFood candy;
     @Mock Room room;
     @Mock IArmor armor;
 
-
     @Test
-    // TODO: This is an example test using mocks. You can delete this test altogether, or you can get it to pass.
-    // To get this test to pass you have to implement the Strategy. Nothing necessarily needs to change in this test.
-    void testEatingMostNutritiousFood() {
+    void testFightWeakestCreatureWhenHealthy() {
         // Arrange
         when(character.getCurrentRoom()).thenReturn(room);
-        when(commandFactory.createEatCommand(eq(character), any(IFood.class))).thenReturn(command);
-        when(steak.healthValue()).thenReturn(2.0);
-        when(candy.healthValue()).thenReturn(1.0);
-        when(room.getFoodItems()).thenReturn(List.of(candy, steak));
+        when(character.getHealth()).thenReturn(5.0); // Healthy
+        when(weakestCreature.getHealth()).thenReturn(1.0);
+        when(strongerCreature.getHealth()).thenReturn(4.0);
+        when(weakestCreature.isCreature()).thenReturn(true);
+        when(strongerCreature.isCreature()).thenReturn(true);
+        when(room.getCharacters()).thenReturn(List.of(weakestCreature, strongerCreature));
+        when(commandFactory.createFightCommand(character, weakestCreature)).thenReturn(command);
 
         // Act
-        GraceNolanSierraStrategy fighterStrategy = new GraceNolanSierraStrategy(commandFactory);
+        GraceNolanSierraStrategy strategy = new GraceNolanSierraStrategy(commandFactory);
+        Command selectedCommand = strategy.generateCommand(character);
 
         // Assert
-        // No good way to verify Command, so we just verify we called the correction creation method
-        Command selectedCommand = fighterStrategy.generateCommand(character);
-        verify(commandFactory).createEatCommand(character, steak);
+        verify(commandFactory).createFightCommand(character, weakestCreature);
+        assertEquals(command, selectedCommand);
     }
 
-    // TODO: Add enough tests to get full line coverage of your getCommand() method on your Strategy class
+    @Test
+    void testMoveToRandomNeighborIfCreaturePresentButNotHealthy() {
+        // Arrange
+        when(character.getCurrentRoom()).thenReturn(room);
+        when(character.getHealth()).thenReturn(2.0); // Not healthy
+        when(weakestCreature.isCreature()).thenReturn(true);
+        when(room.getCharacters()).thenReturn(List.of(weakestCreature));
+        when(room.getNeighborRoomNames()).thenReturn(List.of("Room1", "Room2"));
+        when(commandFactory.createMoveCommand(eq(character), any(String.class))).thenReturn(command);
 
+        // Act
+        GraceNolanSierraStrategy strategy = new GraceNolanSierraStrategy(commandFactory);
+        Command selectedCommand = strategy.generateCommand(character);
+
+        // Assert
+        verify(commandFactory).createMoveCommand(eq(character), any(String.class));
+        assertEquals(command, selectedCommand);
+    }
 
     @Test
     void testWearingArmorWhenAvailable() {
@@ -69,38 +84,76 @@ class GraceNolanSierraStrategyTest {
     }
 
     @Test
-    void testNoArmorAvailable() {
+    void testEatingMostNutritiousFood() {
         // Arrange
         when(character.getCurrentRoom()).thenReturn(room);
-        when(room.getArmoredSuits()).thenReturn(Collections.emptyList());
+        when(commandFactory.createEatCommand(eq(character), eq(steak))).thenReturn(command);
+        when(steak.healthValue()).thenReturn(5.0);
+        when(candy.healthValue()).thenReturn(2.0);
+        when(room.getFoodItems()).thenReturn(List.of(candy, steak));
 
         // Act
         GraceNolanSierraStrategy strategy = new GraceNolanSierraStrategy(commandFactory);
         Command selectedCommand = strategy.generateCommand(character);
 
         // Assert
-        verify(room).getArmoredSuits();
-        assertNull(selectedCommand, "Expected no command to be generated when no armor is available.");
+        verify(commandFactory).createEatCommand(character, steak);
+        assertEquals(command, selectedCommand);
     }
 
+    @Test
+    void testNoArmorNoFoodNoCreatureIdle() {
+        // Arrange
+        when(character.getCurrentRoom()).thenReturn(room);
+        when(commandFactory.createDoNothingCommand()).thenReturn(doNothingCommand);
+        when(room.getFoodItems()).thenReturn(Collections.emptyList());
+        when(room.getArmoredSuits()).thenReturn(Collections.emptyList());
+        when(room.getCharacters()).thenReturn(Collections.emptyList());
 
-    // TODO fix
-//    @Test
-//    void testIdleWhenNoActionsAvailable() {
-//        // Arrange
-//        when(character.getCurrentRoom()).thenReturn(room);
-//        when(commandFactory.createDoNothingCommand().thenReturn(doNothingCommand);
-//        when(room.getFoodItems()).thenReturn(List.of());
-//        when(room.getCharacters()).thenReturn(List.of());
-//        when(room.getNeighborRoomNames()).thenReturn(List.of());
-//
-//        // Act
-//        GraceNolanSierraStrategy strategy = new GraceNolanSierraStrategy(commandFactory);
-//        Command command = strategy.generateCommand(character);
-//
-//        // Assert
-//        verify(commandFactory).createDoNothingCommand();
-//        assertEquals(doNothingCommand, command);
-//    }
+        // Act
+        GraceNolanSierraStrategy strategy = new GraceNolanSierraStrategy(commandFactory);
+        Command selectedCommand = strategy.generateCommand(character);
 
+        // Assert
+        verify(commandFactory).createDoNothingCommand();
+        assertEquals(doNothingCommand, selectedCommand);
+    }
+
+    @Test
+    void testNoNeighborRoomsAndCreaturePresent() {
+        // Arrange
+        when(character.getCurrentRoom()).thenReturn(room);
+        when(character.getHealth()).thenReturn(2.0); // Not healthy
+        when(weakestCreature.isCreature()).thenReturn(true);
+        when(room.getCharacters()).thenReturn(List.of(weakestCreature));
+        when(room.getNeighborRoomNames()).thenReturn(Collections.emptyList());
+        when(commandFactory.createDoNothingCommand()).thenReturn(doNothingCommand);
+
+        // Act
+        GraceNolanSierraStrategy strategy = new GraceNolanSierraStrategy(commandFactory);
+        Command selectedCommand = strategy.generateCommand(character);
+
+        // Assert
+        verify(commandFactory).createDoNothingCommand();
+        assertEquals(doNothingCommand, selectedCommand);
+    }
+
+    @Test
+    void testDefaultDoNothingWhenNoActionsAvailable() {
+        // Arrange
+        when(character.getCurrentRoom()).thenReturn(room);
+        when(commandFactory.createDoNothingCommand()).thenReturn(doNothingCommand);
+        when(room.getFoodItems()).thenReturn(Collections.emptyList());
+        when(room.getArmoredSuits()).thenReturn(Collections.emptyList());
+        when(room.getCharacters()).thenReturn(Collections.emptyList());
+        when(room.getNeighborRoomNames()).thenReturn(Collections.emptyList());
+
+        // Act
+        GraceNolanSierraStrategy strategy = new GraceNolanSierraStrategy(commandFactory);
+        Command selectedCommand = strategy.generateCommand(character);
+
+        // Assert
+        verify(commandFactory).createDoNothingCommand();
+        assertEquals(doNothingCommand, selectedCommand);
+    }
 }
